# simplon_projet7_horagor3

./: .dockerignore  .env.example  .gitignore  README.md  app_frontend.py  docker-compose.dev.yml  docker-compose.yml  main.py  mon_tutoriel.md  plan_horrago_3.md  plan_horragor_3.md  pyproject.toml
.streamlit/: config.toml
data/: build_faiss_index.py
data_api/: __init__.py  database.py  main.py  models.py
data_api/routers/: __init__.py  films.py
docker/: data_api.Dockerfile  frontend.Dockerfile  intelligence_api.Dockerfile
scripts/: faiss_to_pgvector.py
src/: __init__.py  config.py  main.py
src/graph/: __init__.py  nodes.py  pipeline.py  router.py
src/models/: __init__.py  state.py
src/tools/: __init__.py  horror_tools.py  rag_tool.py  scraper_tool.py
