[project]
name = "simplon-projet7-horagor3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langfuse>=4.14.0",
    "langgraph>=1.2.9",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "streamlit>=1.59.1",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.51.0",
]
